[package]
name = "libtzfile"
version = "2.0.0"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
description = "This library provides both low and high level parsing of the system timezone information files (TZIF) provided by IANA."
keywords = ["timezone", "tzfiles", "TZIF", "json", "IANA"]
categories = ["date-and-time", "parsing"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/nicolasbauw/rs-tzfile"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
json = ["serde", "serde_json", "chrono/serde", "chrono"]
parse = ["chrono"]
