[package]
name = "libtzfile"
version = "3.1.0"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
description = "This library provides low and high level parsing of the IANA system timezone information files (TZIF)."
keywords = ["timezone", "tzfiles", "TZIF", "json", "IANA"]
categories = ["date-and-time", "parsing"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nicolasbauw/rs-tzfile"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1", default-features = false }
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["std"]
json = ["serde", "serde_json", "chrono/serde", "chrono"]
parse = ["chrono"]
std = []

[package.metadata.docs.rs]
features = ["json"]
